Fix: Remove use of deprecated constructors
Float(float) and friends (Integer, etc) are all deprecated. Replace with
static methods like valueOf() and isNaN().